# trade-surveillance-agents

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
deploy/: agent_runtime.py  gateway_targets.json
docs/: ADR.md  DEPLOYMENT.md  SYNTHETIC.md
eval/dataset/: ground_truth.json  manifest.json
frontend/: app.js  index.html
notebooks/: 01_synthetic_event_generation.ipynb  02_detection_evaluation.ipynb  03_triage_evaluation.ipynb
src/agents/: contracts.py  definitions.py  graph.py  tools.py
src/backend/: app.py  pipeline.py
src/datagen/: __main__.py  config.py  generator.py
src/detection/: config.py  detectors.py  features.py  matching.py
src/evaluation/: harness.py  replay.py
src/mockapis/: account_service.py  market_reference.py
src/schemas/: detection.py  events.py
src/services/: gateway.py  identity.py  memory.py  observability.py  settings.py
tests/unit/: test_agents_graph.py  test_backend.py  test_detectors_ground_truth.py  test_evaluation.py  test_features.py  test_services.py
