[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trade-surveillance-agents"
version = "0.1.0"
description = "Multi-agent trade surveillance pipeline on Strands Agents and Amazon Bedrock AgentCore"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "pydantic>=2.6",
    "strands-agents>=1.0",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
aws = [
    "bedrock-agentcore>=0.1",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
    "matplotlib>=3.8",
    "jupyter>=1.0",
    "nbconvert>=7.16",
    "ipykernel>=6.29",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/datagen", "src/detection", "src/schemas", "src/agents",
    "src/mockapis", "src/evaluation", "src/services", "src/backend",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "W"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "pandas.*", "pyarrow.*", "matplotlib.*", "bedrock_agentcore.*",
    "opentelemetry.exporter.*",
]
ignore_missing_imports = true
